# butl-protocol

./: .gitignore  AI_COLLABORATION_DISCLOSURE.md  AI_GENERATION_DISCLOSURE.md  BUTL_DIAGRAMS.md  BUTL_ONE_PAGER.md  BUTL_WHITE_PAPER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GLOSSARY.md  KEY_IS_IDENTITY_WARNING.md  LICENSE-APACHE.md  LICENSE-MIT.md  LICENSE.md  NOTICE.md  PATENTS.md  README.md  ROADMAP.md  SECURITY.md  WHY_ADDRESS_AND_PUBKEY.md
ai/: AI_BRIEFING_DOCUMENT.md  AI_CODE_GENERATION_REFERENCE.md  AI_QUICK_START_PROMPT.md  AL_CODE_GENERATION_REFERENCE.md
docs/: BUTL_ECOSYSTEM_ARCHITECTURE.md  BUTL_PURE_MATH_PROOF.md  CONFIDENCE_WITHOUT_POS.md  DEVELOPER_WARNING_POS_DISABLED.md  INTEGRATION_EXAMPLES.md  PROOF_OF_SATOSHI_BENEFITS.md
legal/: DEFENSIVE-PATENT-PLEDGE.md
mvp/: Cargo.toml  HOW_TO_PROVE_BUTL_WORKS.md  QUICK_REFERENCE.md  VERIFICATION_CHECKLIST.md  butl_mvp_v12.py  butl_mvp_v12.rs
python/: README.md  butl_v12.py
rust/: Cargo.toml  README.md  butl_v12.rs
spec/: BUTL_Protocol_Specifications_v1.2.md  HEADER_REGISTRY.md  TEST_VECTORS.md  VERSIONING.md  WELL_KNOW_BUTL_SPEC.md
