[package]
name = "butl"
version = "1.2.0"
edition = "2021"
description = "Bitcoin Universal Trust Layer - reference implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/satushinakamojo/butl-protocol"
readme = "README.md"
keywords = ["bitcoin", "cryptography", "trust", "identity", "encryption"]
categories = ["cryptography", "authentication"]

[dependencies]
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
sha2 = "0.10"
ripemd = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"
